add training on a file before contribution