@@ -1,15 +1,17 @@
 package org.jetbrains.id.names.suggesting.impl;
 
+import com.google.common.collect.Lists;
 import com.intellij.completion.ngram.slp.counting.giga.GigaCounter;
 import com.intellij.completion.ngram.slp.modeling.ngram.JMModel;
 import com.intellij.completion.ngram.slp.modeling.ngram.NGramModel;
 import com.intellij.completion.ngram.slp.translating.Vocabulary;
 import com.intellij.openapi.util.TextRange;
 import com.intellij.psi.*;
+import com.intellij.psi.search.searches.ReferencesSearch;
 import kotlin.Pair;
 import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.id.names.suggesting.NGramModelContributor;
+import org.jetbrains.id.names.suggesting.NameModelContributor;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -17,13 +19,13 @@ import java.util.stream.Stream;
 
 import static java.lang.Integer.max;
 
-public class NGramModelContributorImpl implements NGramModelContributor {
+public class NameModelContributorImpl implements NameModelContributor {
     private final Vocabulary vocabulary;
     private final NGramModel model;
     private final int GLOBAL_PREDICTION_CUTOFF = 10;
     private final HashSet<Integer> identifiers = new HashSet<>();
 
-    public NGramModelContributorImpl() {
+    public NameModelContributorImpl() {
         this.vocabulary = new Vocabulary();
         this.model = new JMModel(6, 0.5, new GigaCounter());
     }
@@ -38,18 +40,19 @@ public class NGramModelContributorImpl implements NGramModelContributor {
                 .withRoot(file)
                 .onRange(new TextRange(0, 64 * 1024)) // first 128 KB of chars
                 .filter(this::shouldLex)
-                .map(this::addToIdentifiers)
+                .toList()
+                .stream()
+                .peek(this::addToIdentifiers)
                 .map(PsiElement::getText)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    private PsiElement addToIdentifiers(PsiElement element) {
+    private void addToIdentifiers(PsiElement element) {
         if (element instanceof PsiIdentifier) {
             if (element.getParent() instanceof PsiVariable) {
                 identifiers.add(vocabulary.toIndex(element.getText()));
             }
         }
-        return element;
     }
 
     private boolean shouldLex(@NotNull PsiElement element) {
@@ -59,27 +62,35 @@ public class NGramModelContributorImpl implements NGramModelContributor {
     }
 
     @Override
-    public LinkedHashSet<String> contribute(@NotNull PsiElement element) {
-        Stream<PsiElement> elementUsages = Arrays.stream(element.getReferences())
-                .map(PsiReference::getElement);
+    public LinkedHashSet<String> contribute(@NotNull PsiVariable element) {
+        Stream<PsiReference> elementUsages = ReferencesSearch
+                .search(element)
+                .findAll()
+                .stream();
         return Stream.concat(Stream.of(element), elementUsages)
+                .map(this::getIdentifier)
                 .flatMap(this::contributeUsageName)
                 .sorted((p1, p2) -> -Double.compare(p1.getSecond(), p2.getSecond()))
-                .map(Pair<Integer, Double>::getFirst)
+                .map(Pair::getFirst)
                 .distinct()
                 .limit(GLOBAL_PREDICTION_CUTOFF)
                 .map(vocabulary::toWord)
                 .collect(Collectors.toCollection(LinkedHashSet::new));
     }
 
-    private Stream<Pair<Integer, Double>> contributeUsageName(@NotNull PsiElement element) {
-        return model.predictToken(vocabulary.toIndices(getNGramPrefix(element, model.getOrder())), model.getOrder() - 1)
+    private PsiIdentifier getIdentifier(Object element) {
+        if (element instanceof PsiVariable) return ((PsiVariable) element).getNameIdentifier();
+        if (element instanceof PsiReferenceExpression)
+            return (PsiIdentifier) ((PsiReferenceExpression) element).getReferenceNameElement();
+        return null;
+    }
+
+    private Stream<Pair<Integer, Double>> contributeUsageName(@NotNull PsiIdentifier identifier) {
+        return model.predictToken(vocabulary.toIndices(getNGramPrefix(identifier, model.getOrder())), model.getOrder() - 1)
                 .entrySet()
                 .stream()
                 .filter(e -> identifiers.contains(e.getKey()))
-                .map(e -> new Pair<Integer, Double>(e.getKey(), toProb(e.getValue())))
-                .sorted((p1, p2) -> -Double.compare(p1.getSecond(), p2.getSecond()))
-                .limit(20);
+                .map(e -> new Pair<Integer, Double>(e.getKey(), toProb(e.getValue())));
     }
 
     public double toProb(@NotNull Pair<Double, Double> probConf) {
@@ -88,16 +99,34 @@ public class NGramModelContributorImpl implements NGramModelContributor {
         return prob * conf + (1 - conf) / vocabulary.size();
     }
 
-    private List<String> getNGramPrefix(@NotNull PsiElement element, @NotNull Integer order) {
-        return SyntaxTraverser.revPsiTraverser()
+    @Override
+    public void forgetVariableUsages(@NotNull PsiVariable element) {
+        Stream<PsiReference> elementUsages = ReferencesSearch
+                .search(element)
+                .findAll()
+                .stream();
+        Stream.concat(Stream.of(element), elementUsages)
+                .map(this::getIdentifier)
+                .forEach(this::forgetVariableUsage);
+    }
+
+    private void forgetVariableUsage(PsiIdentifier identifier) {
+        model.forgetToken(vocabulary.toIndices(getNGramPrefix(identifier, model.getOrder())), model.getOrder() - 1);
+    }
+
+    private List<String> getNGramPrefix(@NotNull PsiElement element, int order) {
+        final List<String> prefix = new ArrayList<>();
+        for (final PsiElement token : SyntaxTraverser
+                .revPsiTraverser()
                 .withRoot(element.getContainingFile())
                 .onRange(new TextRange(0, max(0, element.getTextOffset())))
-                .filter(this::shouldLex)
-                .map(PsiElement::getText)
-                .toList()
-                .stream()
-                .limit(order)
-                .sorted(Collections.reverseOrder())
-                .collect(Collectors.toList());
+                .filter(this::shouldLex)) {
+            prefix.add(token.getText());
+            if (--order < 1) {
+                break;
+            }
+        }
+        return Lists.reverse(prefix);
     }
+
 }
